# jj-swift

./: .gitignore  Package.swift  mise.toml
.github/workflows/: release.yml
Plugins/BuildFFI/: plugin.swift
Sources/CJJFfi/: shim.c
Sources/CJJFfi/include/: jj_ffi.h  jj_ffiFFI.h  module.modulemap
Sources/JJSwift/: jj_ffi.swift
Tests/JJSwiftTests/: JJSwiftTests.swift
docs/: Plan.md
jj-ffi/: .gitignore  Cargo.toml  uniffi.toml
jj-ffi/src/: error.rs  git.rs  lib.rs  log.rs  repo.rs  revset.rs  transaction.rs  workspace.rs
jj-ffi/src/types/: commit.rs  ids.rs  mod.rs  signature.rs
